additional error handling added
